need to fix alignment of  highlight sect

--- a/e-commerce-website/styles.css
+++ b/e-commerce-website/styles.css
@@ -132,6 +132,12 @@ button:active {
 Highlight Section
 
 */
+.highlight__wrapper {
+    border: 1px solid gold;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
 
 .highlight__image{
     border: 2px solid #7342d65d;
@@ -144,4 +150,15 @@ Highlight Section
     border-radius: 4px;
     font-size: 32px;
     margin-bottom: 24px;
+}
+
+.highlight__subtitle {
+    font-size: 20px;
+    margin-bottom: 16px;
+    text-align: center;
+}
+
+.highlight__description {
+    text-align: center;
+    max-width: 280px;
 }
